--- a/src/routes/homePage.scss
+++ b/src/routes/homePage.scss
@@ -9,6 +9,29 @@
     // padding: ;
     .wrapper {
       padding-right: 100px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 50px;
+      height: 100%;
+      background-color: rebeccapurple;
+
+      .title {
+        font-size: 64px;
+      }
+      .boxes {
+        display: flex;
+        // flex-direction: row   ;
+        justify-content: space-between;
+
+        .h1 {
+          font-size: 36px;
+        }
+        .h2 {
+          font-size: 20px;
+          font-weight: 300;
+        }
+      }
     }
   }
   .imageContainer {
