--- a/src/Compnents/searchBar/searchBar.scss
+++ b/src/Compnents/searchBar/searchBar.scss
@@ -1,8 +1,65 @@
+@import "../../responsive.scss";
 .searchBar {
   .type {
     button {
       padding: 16px 36px;
       border: 1px solid #999;
+      cursor: pointer;
+      background-color: white;
+      text-transform: capitalize;
+      border-bottom: none;
+
+      &.active {
+        background-color: black;
+        color: white;
+      }
+
+      &:first-child {
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+      }
+
+      &:last-child {
+        border-top-right-radius: 5px;
+        border-left: 5px;
+      }
+    }
+  }
+  form {
+    border: 1px solid #999;
+    display: flex;
+    justify-content: center;
+    height: 64px;
+    gap: 5px;
+
+    @include small {
+      flex-direction: column;
+    }
+    input {
+      border: none;
+      padding: 0px 10px;
+      width: 200px;
+
+      @include large {
+        padding: 0px 5px;
+        &:nth-child(2),
+        &:nth-child(3) {
+          width: 140px;
+        }
+        @include medium {
+          padding: 0px 5px;
+          &:nth-child(2),
+          &:nth-child(3) {
+            width: 140px;
+          }
+        }
+      }
+    }
+    button {
+      border: none;
+      cursor: pointer;
+      background-color: #fece51;
+      flex: 1;
     }
   }
 }
