--- a/src/routes/homePage.scss
+++ b/src/routes/homePage.scss
@@ -1,6 +1,6 @@
+@import "../responsive.scss";
 .homepage {
   display: flex;
-
   height: 100%;
 
   .textContainer {
@@ -14,18 +14,33 @@
       justify-content: center;
       gap: 50px;
       height: 100%;
-      background-color: rebeccapurple;
 
+      @include medium {
+        padding: 0;
+      }
       .title {
         font-size: 64px;
+
+        @include large {
+          font-size: 48px;
+        }
       }
       .boxes {
         display: flex;
         // flex-direction: row   ;
         justify-content: space-between;
-
+        @include medium {
+          display: none;
+        }
+        @include small {
+          justify-content: flex-start;
+        }
         .h1 {
           font-size: 36px;
+
+          @include large {
+            font-size: 32px;
+          }
         }
         .h2 {
           font-size: 20px;
@@ -35,16 +50,22 @@
     }
   }
   .imageContainer {
-    flex: 2;
     background-color: #fcf5f3;
+    flex: 2;
     position: relative;
     display: flex;
     align-items: center;
+    @include medium {
+      display: none;
+    }
 
     img {
       width: 115%;
       position: absolute;
       right: 0;
+      @include large {
+        width: 105%;
+      }
     }
   }
 }
